# MLOps_lab_11

./: .dockerignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  main.py  settings.py
